{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 53,
  "lineage": "9fd0e654-bec8-c69e-9b4b-42dac9dee1cf",
  "resources": [
    {
      "module": "module.app_EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce10bf92ed664c67",
            "arn": "arn:aws:ec2:eu-west-1:473490497463:instance/i-0db3af10211559d1f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db3af10211559d1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "EC2sonarqubeKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-050aea3c1c85e1d43",
            "private_dns": "ip-10-0-3-181.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ace1411486675fa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01f39b804f40a321d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0572023c62eebb8cb",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f39b804f40a321d"
            ]
          },
          "dependencies": [
            "module.app_EC2.data.aws_ami.amazon_linux_2",
            "module.app_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.private_app_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce10bf92ed664c67",
            "arn": "arn:aws:ec2:eu-west-1:473490497463:instance/i-0d0a1621e334cf047",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0a1621e334cf047",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "EC2sonarqubeKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c6c5ea2c2da6edc2",
            "private_dns": "ip-10-0-4-195.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-078b40908f3fde697",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01f39b804f40a321d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-061b6d351b9234e68",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f39b804f40a321d"
            ]
          },
          "dependencies": [
            "module.app_EC2.data.aws_ami.amazon_linux_2",
            "module.app_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.private_app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:security-group/sg-01f39b804f40a321d",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0823a5372d390e5a2"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-01f39b804f40a321d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ded7f04af8051efa"
                ],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ded7f04af8051efa"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ded7f04af8051efa"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "application",
            "name_prefix": "",
            "owner_id": "473490497463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "application security group"
            },
            "tags_all": {
              "Name": "application security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 9000,
            "id": "sgrule-1384284878",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01f39b804f40a321d",
            "security_group_rule_id": "sgr-00b25c109caa166fe",
            "self": false,
            "source_security_group_id": "sg-0ded7f04af8051efa",
            "timeouts": null,
            "to_port": 9000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.aws_security_group.security_group",
            "module.data_security_group.aws_security_group.security_group",
            "module.load_balancer_security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 5432,
            "id": "sgrule-1991341541",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01f39b804f40a321d",
            "security_group_rule_id": "sgr-0bb2bc9c64e559ab2",
            "self": false,
            "source_security_group_id": "sg-0823a5372d390e5a2",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.aws_security_group.security_group",
            "module.data_security_group.aws_security_group.security_group",
            "module.load_balancer_security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1794477107",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01f39b804f40a321d",
            "security_group_rule_id": "sgr-05e2fe8c9458f1fc1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.aws_security_group.security_group",
            "module.data_security_group.aws_security_group.security_group",
            "module.load_balancer_security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.data_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:security-group/sg-0823a5372d390e5a2",
            "description": "enable http/https access on port 80/443",
            "egress": [],
            "id": "sg-0823a5372d390e5a2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f39b804f40a321d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "data",
            "name_prefix": "",
            "owner_id": "473490497463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "data security group"
            },
            "tags_all": {
              "Name": "data security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.data_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 5432,
            "id": "sgrule-880091956",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0823a5372d390e5a2",
            "security_group_rule_id": "sgr-0bdcfabd249c2e968",
            "self": false,
            "source_security_group_id": "sg-01f39b804f40a321d",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.aws_security_group.security_group",
            "module.data_security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:473490497463:loadbalancer/app/external/ba731e9c4b6dde7b",
            "arn_suffix": "app/external/ba731e9c4b6dde7b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "external-517248880.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:473490497463:loadbalancer/app/external/ba731e9c4b6dde7b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "external",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ded7f04af8051efa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02fbfa85574de630c"
              },
              {
                "subnet_id": "subnet-045123f072046528b"
              },
              {
                "subnet_id": "subnet-0a0efc780b2028d86"
              }
            ],
            "subnets": [
              "subnet-02fbfa85574de630c",
              "subnet-045123f072046528b",
              "subnet-0a0efc780b2028d86"
            ],
            "tags": {
              "Name": "external load balancer"
            },
            "tags_all": {
              "Name": "external load balancer"
            },
            "vpc_id": "vpc-006ae968b5c04e52e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.load_balancer_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:473490497463:listener/app/external/ba731e9c4b6dde7b/6fe774eadc4943dc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:473490497463:targetgroup/external-tg/305194d6221aed07",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:473490497463:listener/app/external/ba731e9c4b6dde7b/6fe774eadc4943dc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:473490497463:loadbalancer/app/external/ba731e9c4b6dde7b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.load_balancer",
            "module.load_balancer.aws_lb_target_group.alb_target_group",
            "module.load_balancer_security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:473490497463:targetgroup/external-tg/305194d6221aed07",
            "arn_suffix": "targetgroup/external-tg/305194d6221aed07",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:473490497463:targetgroup/external-tg/305194d6221aed07",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "external-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_tg_attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:473490497463:targetgroup/external-tg/305194d6221aed07-20230807133850604600000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:473490497463:targetgroup/external-tg/305194d6221aed07",
            "target_id": "i-0db3af10211559d1f"
          },
          "dependencies": [
            "module.app_EC2.aws_instance.ec2_instance",
            "module.app_EC2.data.aws_ami.amazon_linux_2",
            "module.app_security_group.aws_security_group.security_group",
            "module.load_balancer.aws_lb_target_group.alb_target_group",
            "module.vpc.aws_subnet.private_app_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:473490497463:targetgroup/external-tg/305194d6221aed07-20230807133850676500000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:473490497463:targetgroup/external-tg/305194d6221aed07",
            "target_id": "i-0d0a1621e334cf047"
          },
          "dependencies": [
            "module.app_EC2.aws_instance.ec2_instance",
            "module.app_EC2.data.aws_ami.amazon_linux_2",
            "module.app_security_group.aws_security_group.security_group",
            "module.load_balancer.aws_lb_target_group.alb_target_group",
            "module.vpc.aws_subnet.private_app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:security-group/sg-0ded7f04af8051efa",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f39b804f40a321d"
                ],
                "self": false,
                "to_port": 9000
              }
            ],
            "id": "sg-0ded7f04af8051efa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "load-balancer",
            "name_prefix": "",
            "owner_id": "473490497463",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "load-balancer security group"
            },
            "tags_all": {
              "Name": "load-balancer security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 9000,
            "id": "sgrule-472173045",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ded7f04af8051efa",
            "security_group_rule_id": "sgr-04a9d50e1eb66d028",
            "self": false,
            "source_security_group_id": "sg-01f39b804f40a321d",
            "timeouts": null,
            "to_port": 9000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.aws_security_group.security_group",
            "module.load_balancer_security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5c0db8318bc59b0",
            "association_id": "eipassoc-0316b2f441c7e1fe1",
            "domain": "vpc",
            "id": "eipalloc-0e5c0db8318bc59b0",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0c1d8536e46aa975f",
            "private_dns": "ip-10-0-0-135.eu-west-1.compute.internal",
            "private_ip": "10.0.0.135",
            "public_dns": "ec2-54-76-112-59.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.76.112.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az1 eip"
            },
            "tags_all": {
              "Name": "nat gateway az1 eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0147c7d34649bc576",
            "association_id": "eipassoc-0981716000a6131ad",
            "domain": "vpc",
            "id": "eipalloc-0147c7d34649bc576",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-030bd5e1c1edd4b43",
            "private_dns": "ip-10-0-1-96.eu-west-1.compute.internal",
            "private_ip": "10.0.1.96",
            "public_dns": "ec2-54-216-83-36.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.216.83.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az2 eip"
            },
            "tags_all": {
              "Name": "nat gateway az2 eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b823978515e8f62",
            "association_id": "eipassoc-098e7cabb0127973c",
            "domain": "vpc",
            "id": "eipalloc-05b823978515e8f62",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-03561d18a26bb706c",
            "private_dns": "ip-10-0-2-45.eu-west-1.compute.internal",
            "private_ip": "10.0.2.45",
            "public_dns": "ec2-54-154-156-219.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.154.156.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az3 eip"
            },
            "tags_all": {
              "Name": "nat gateway az3 eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5c0db8318bc59b0",
            "association_id": "eipassoc-0316b2f441c7e1fe1",
            "connectivity_type": "public",
            "id": "nat-085f9853838cd23de",
            "network_interface_id": "eni-0c1d8536e46aa975f",
            "private_ip": "10.0.0.135",
            "public_ip": "54.76.112.59",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a0efc780b2028d86",
            "tags": {
              "Name": "nat gateway az1"
            },
            "tags_all": {
              "Name": "nat gateway az1"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0147c7d34649bc576",
            "association_id": "eipassoc-0981716000a6131ad",
            "connectivity_type": "public",
            "id": "nat-0741041821793d1ea",
            "network_interface_id": "eni-030bd5e1c1edd4b43",
            "private_ip": "10.0.1.96",
            "public_ip": "54.216.83.36",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02fbfa85574de630c",
            "tags": {
              "Name": "nat gateway az2"
            },
            "tags_all": {
              "Name": "nat gateway az2"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b823978515e8f62",
            "association_id": "eipassoc-098e7cabb0127973c",
            "connectivity_type": "public",
            "id": "nat-07fa7b2ee11bafbed",
            "network_interface_id": "eni-03561d18a26bb706c",
            "private_ip": "10.0.2.45",
            "public_ip": "54.154.156.219",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-045123f072046528b",
            "tags": {
              "Name": "nat gateway az3"
            },
            "tags_all": {
              "Name": "nat gateway az3"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:route-table/rtb-02e8ff5d4e26d11bc",
            "id": "rtb-02e8ff5d4e26d11bc",
            "owner_id": "473490497463",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-085f9853838cd23de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table az1"
            },
            "tags_all": {
              "Name": "private route table az1"
            },
            "timeouts": null,
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:route-table/rtb-089f92e8b3c42e68d",
            "id": "rtb-089f92e8b3c42e68d",
            "owner_id": "473490497463",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0741041821793d1ea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table az2"
            },
            "tags_all": {
              "Name": "private route table az2"
            },
            "timeouts": null,
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:route-table/rtb-048c084d789cd6ff3",
            "id": "rtb-048c084d789cd6ff3",
            "owner_id": "473490497463",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07fa7b2ee11bafbed",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table az3"
            },
            "tags_all": {
              "Name": "private route table az3"
            },
            "timeouts": null,
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b384d5c493e91071",
            "route_table_id": "rtb-02e8ff5d4e26d11bc",
            "subnet_id": "subnet-0572023c62eebb8cb"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.nat_gateway.aws_route_table.private_route_table",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.private_app_subnet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f65494c486f777e",
            "route_table_id": "rtb-089f92e8b3c42e68d",
            "subnet_id": "subnet-061b6d351b9234e68"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.nat_gateway.aws_route_table.private_route_table",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.private_app_subnet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4b1dbbe8d5729e8",
            "route_table_id": "rtb-048c084d789cd6ff3",
            "subnet_id": "subnet-06db093d2fc71b90a"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.nat_gateway.aws_route_table.private_route_table",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.private_app_subnet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03896e18ecce33106",
            "route_table_id": "rtb-02e8ff5d4e26d11bc",
            "subnet_id": "subnet-0aac4ffaa30daf18a"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.nat_gateway.aws_route_table.private_route_table",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.private_data_subnet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022892daca09cc00b",
            "route_table_id": "rtb-089f92e8b3c42e68d",
            "subnet_id": "subnet-03580ec4c70189009"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway",
            "module.nat_gateway.aws_nat_gateway.nat_gateway",
            "module.nat_gateway.aws_route_table.private_route_table",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.private_data_subnet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06defeef77eab8442",
            "route_table_id": "rtb-048c084d789cd6ff3",
            "subnet_id": "subnet-0179403c053ec31d5"
          },
          "dependencies": [
            "module.nat_gateway.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_data_subnet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.search_EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce10bf92ed664c67",
            "arn": "arn:aws:ec2:eu-west-1:473490497463:instance/i-0a5b425427ba49b61",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5b425427ba49b61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "EC2sonarqubeKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee05256f1c01a67c",
            "private_dns": "ip-10-0-3-148.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e05c7364374c773",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01f39b804f40a321d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0572023c62eebb8cb",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f39b804f40a321d"
            ]
          },
          "dependencies": [
            "module.app_security_group.aws_security_group.security_group",
            "module.search_EC2.data.aws_ami.amazon_linux_2",
            "module.vpc.aws_subnet.private_app_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce10bf92ed664c67",
            "arn": "arn:aws:ec2:eu-west-1:473490497463:instance/i-07e0f60556f0ed555",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e0f60556f0ed555",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "EC2sonarqubeKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a0bb0876fe3a56e",
            "private_dns": "ip-10-0-4-87.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc702cb4a0b87a00",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01f39b804f40a321d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-061b6d351b9234e68",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f39b804f40a321d"
            ]
          },
          "dependencies": [
            "module.app_security_group.aws_security_group.security_group",
            "module.search_EC2.data.aws_ami.amazon_linux_2",
            "module.vpc.aws_subnet.private_app_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce10bf92ed664c67",
            "arn": "arn:aws:ec2:eu-west-1:473490497463:instance/i-03da6b26fa99dfe48",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03da6b26fa99dfe48",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "EC2sonarqubeKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05fd5d8b88a923e39",
            "private_dns": "ip-10-0-5-8.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bb0e2e6eecf8e234",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01f39b804f40a321d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06db093d2fc71b90a",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f39b804f40a321d"
            ]
          },
          "dependencies": [
            "module.app_security_group.aws_security_group.security_group",
            "module.search_EC2.data.aws_ami.amazon_linux_2",
            "module.vpc.aws_subnet.private_app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:internet-gateway/igw-08380ebe2a63c0b4f",
            "id": "igw-08380ebe2a63c0b4f",
            "owner_id": "473490497463",
            "tags": {
              "Name": "sonarqube-igw"
            },
            "tags_all": {
              "Name": "sonarqube-igw"
            },
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:route-table/rtb-0a8e5514177425b08",
            "id": "rtb-0a8e5514177425b08",
            "owner_id": "473490497463",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08380ebe2a63c0b4f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "tags_all": {
              "Name": "public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caf4ccf1e8d19fe4",
            "route_table_id": "rtb-0a8e5514177425b08",
            "subnet_id": "subnet-0a0efc780b2028d86"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00556a2edbd31bc4e",
            "route_table_id": "rtb-0a8e5514177425b08",
            "subnet_id": "subnet-02fbfa85574de630c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e2d2111cf21757c",
            "route_table_id": "rtb-0a8e5514177425b08",
            "subnet_id": "subnet-045123f072046528b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:subnet/subnet-0572023c62eebb8cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0572023c62eebb8cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473490497463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private app subnet az1"
            },
            "tags_all": {
              "Name": "private app subnet az1"
            },
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:subnet/subnet-061b6d351b9234e68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061b6d351b9234e68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473490497463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private app subnet az2"
            },
            "tags_all": {
              "Name": "private app subnet az2"
            },
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:subnet/subnet-06db093d2fc71b90a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06db093d2fc71b90a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473490497463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private app subnet az3"
            },
            "tags_all": {
              "Name": "private app subnet az3"
            },
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:subnet/subnet-0aac4ffaa30daf18a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aac4ffaa30daf18a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473490497463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private data subnet az1"
            },
            "tags_all": {
              "Name": "private data subnet az1"
            },
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:subnet/subnet-03580ec4c70189009",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03580ec4c70189009",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473490497463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private data subnet az2"
            },
            "tags_all": {
              "Name": "private data subnet az2"
            },
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:subnet/subnet-0179403c053ec31d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0179403c053ec31d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473490497463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private data subnet az3"
            },
            "tags_all": {
              "Name": "private data subnet az3"
            },
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:subnet/subnet-0a0efc780b2028d86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0efc780b2028d86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473490497463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az1"
            },
            "tags_all": {
              "Name": "public subnet az1"
            },
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:subnet/subnet-02fbfa85574de630c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fbfa85574de630c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473490497463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az2"
            },
            "tags_all": {
              "Name": "public subnet az2"
            },
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:subnet/subnet-045123f072046528b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045123f072046528b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473490497463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az3"
            },
            "tags_all": {
              "Name": "public subnet az3"
            },
            "vpc_id": "vpc-006ae968b5c04e52e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:473490497463:vpc/vpc-006ae968b5c04e52e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c528c491b62c42f",
            "default_route_table_id": "rtb-0a957ef6b67f90993",
            "default_security_group_id": "sg-02c109da2c756b837",
            "dhcp_options_id": "dopt-097aa5fbbf1e326be",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006ae968b5c04e52e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a957ef6b67f90993",
            "owner_id": "473490497463",
            "tags": {
              "Name": "sonarqube-vpc"
            },
            "tags_all": {
              "Name": "sonarqube-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}